# jinjabmi

./: .gitignore  jinjabmi_demo.ipynb  parameterized_sample_init.yml  pyproject.toml  requirements.txt  sample_init.yml  setup.cfg  setup.py  water_density.yml  wind_transform.yml
bmipy_util/: __init__.py  bmipy_util.py  setup.cfg
examples/: parameterized_sample_init.yml  sample_init.yml  sample_library.yml  water_density.yml  wind_transform.yml
examples/ngen/: .gitignore  example_realization_config_2jinjas.json
jinjabmi/: jinjabmi.py  requirements.txt  setup.cfg
jinjabmi/jinjabmi/: __init__.py  jinjabmi.py
src/bmipy_util/: bmipy_util.py
src/jinjabmi/: jinjabmi.py
