[metadata]
name = bmipy_util
version = 0.0.1
author = NOAA-OWP
description = BMI Utility Modules
long_description = BMI Modules with general utility to multiple modeling activities.
keywords = bmi
[options]
python_requires = >=3.8, <4
install_requires = 
    pyyaml
    numpy
    bmipy
    jinja2
[options.package_data]
sample = 
    config.yml
