[metadata]
name = jinjabmi
version = 0.0.1
author = NOAA-OWP
description = Jinja2 BMI module 
long_description = 'Declarative, template-based BMI "models" using Jinja2 template expressions.'
keywords = bmi jinja jinja2
[options]
python_requires = >=3.8, <4
packages = find:
package_dir =
    =src
install_requires = 
    pyyaml
    numpy
    bmipy
    jinja2
[options.package_data]
where = src
sample = 
    config.yml
packages =
    jinjabmi
