[metadata]
name = jinjabmi
version = 0.0.1
author = NOAA-OWP
description = Jinja2 BMI module 
long_description = 'Declarative, template-based BMI "models" using Jinja2 template expressions.'
keywords = bmi jinja jinja2
[options]
python_requires = >=3.8, <4
install_requires = 
    pyyaml
    numpy
    bmipy
    bmipy_util
    jinja2
[options.package_data]
sample = 
    config.yml
packages =
    jinjabmi
